--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -3,6 +3,6 @@ password_file /etc/mosquitto/passwd
 listener 1883
 listener 8883
 
-certfile /certs/fullchain.pem
+certfile /certs/cert.pem
 cafile /certs/chain.pem
 keyfile /certs/privkey.pem
